# ai-camera-control

./: .gitignore  main.py  pyproject.toml
